# lem-in

./: ._author  ._cmake-build-debug  .nfs.2005114c.6458  CMakeLists.txt  Makefile  author  test
Lib/: Makefile
Lib/src/get_next_line/: get_next_line.c  get_next_line.h
Lib/src/libft/: ft_atoi.c  libft.h
includes/: lem-in.h  lem-in.h~  lem_in.h
src/: add_list.c  additional_func.c  main.c  part1.c  part2.c  record.c  validation.c
